--- a/Object-C/BlackFireIM/Example/Lib/MSIMSDK-UIKit/Resource/TUIKitFace.bundle/emoji/emoji.plist
+++ b/Object-C/BlackFireIM/Example/Lib/MSIMSDK-UIKit/Resource/TUIKitFace.bundle/emoji/emoji.plist
@@ -94,7 +94,7 @@
 	</dict>
 	<dict>
 		<key>face_name</key>
-		<string>[Shit]</string>
+		<string>[Shiiit]</string>
 		<key>face_id</key>
 		<string>016</string>
 	</dict>
