--- a/Object-C/Podfile
+++ b/Object-C/Podfile
@@ -15,7 +15,7 @@ pod 'TZImagePickerController'
 pod 'QCloudCOSXML/Transfer'
 pod 'Bugly'
 
-pod 'MSIMSDK_DE4'
+pod 'MSIMSDK_DE4','1.3.6'
 
 ## 高德地图
 pod 'AMap3DMap'
